--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <h3 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей  жизни?
-        <a href="#" class="header__link">Узнать →</a>
-      </h3>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей  жизни?
+        <a href="#" class="header__link">Узнать &#10230;</a>
+      </p>
       <img src="./images/header-image.png" alt="опять двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
@@ -26,10 +26,10 @@
 
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__span-accent"><span>Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
@@ -37,107 +37,107 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
 
-        <div class="table tabl_svet_white">
-          <div class="table__cell table__cell_svet">
+        <ul class="table">
+          <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text table__text_svet_top">Число нейронов в мозге человека</p>
-          </div>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text table__text_svet_top">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_svet_top">Всемирный Банк, 2017</p>
-          </div>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text table__text_svet_top">Объём памяти человека</p>
-          </div>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text table__text_svet_top">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text table__text_svet_top">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_svet_top">Всемирный Банк, 2017</p>
-          </div>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text table__text_svet_top">Пик обучаемости</p>
-          </div>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">1885 год</h3>
-            <p class="table__text table__text_svet_top">Открытие кривой забывания</p>
-          </div>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
 
-          <div class="table__cell table__cell_svet">
+          <li class="table__cell">
             <h3 class="table__heading">1889 год</h3>
-            <p class="table__text table__text_svet_top">Открытие условного рефлекса</p>
-          </div>
-        </div>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
 
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
-        <h4 class="feynman__subtitle">Выучить и не забыть.</h4>
-        <a href="#" class="feynman__link">Подробнее →</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее &#10230;</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table tabl_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dakr">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dakr">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dakr">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dakr">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dakr">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dakr">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dakr">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dakr">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dakr">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dakr">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
-        <img src="./images/kaufman-triangle.svg" alt="треугольник" class="kaufman__triangle">
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
 
     </main>
@@ -149,26 +149,26 @@
           <p class="footer__author">©2021. Елена Кривошеина</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h5 class="footer__column-heading">О Практикуме</h5>
-          <p class="footer__column-links">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <nav class="footer__column-links">
             <a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a>
             <a href="https://praktikum.yandex.ru" class="footer__column-link">Концепция</a>
             <a href="https://praktikum.yandex.ru" class="footer__column-link">Наставники</a>
-          </p>
+          </nav>
         </div>
         <div class="footer__column footer__column_content_social">
-          <h5 class="footer__column-heading">Соцсети</h5>
-          <p class="footer__column-links">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <nav class="footer__column-links">
             <a href="https://www.facebook.com/yandex.praktikum" class="footer__column-link">
-              <img src="./images/facebook_color_white.svg" alt="Fsb" class="footer__social-icon">Facebook
+              <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook
             </a>
             <a href="https://vk.com/yandex.praktikum" class="footer__column-link">
-              <img src="./images/vk_color_white.svg" alt="Vk" class="footer__social-icon">ВКонтакте
+              <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">ВКонтакте
             </a>
             <a href="https://instagram.com/yndx.praktikum" class="footer__column-link">
-              <img src="./images/instagram_color_white.svg" alt="Inst" class="footer__social-icon">Instagram
+              <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram
             </a>
-          </p>
+          </nav>
         </div>
       </div>
 
