исправлены transition в ссылках

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей  жизни?
-        <a href="#" class="header__link">Узнать &#10230;</a>
+        <a target="_blank"  href="#" class="header__link">Узнать &#10230;</a>
       </p>
       <img src="./images/header-image.png" alt="опять двойка" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
@@ -102,7 +102,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &#10230;</a>
+        <a target="_blank"  href="#" class="feynman__link">Подробнее &#10230;</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
       </section>
 
@@ -166,7 +166,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="обложка книги" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу &#10230;</a>
+            <a target="_blank"  href="#" class="khan__buy-link">Купить книгу &#10230;</a>
           </div>
         </div>
 
@@ -225,16 +225,16 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__logo">
+          <a target="_blank"  href="#" class="resources__logo">
             <!-- <img src="./images/resources-arzamas.svg" alt="Арзамас"> -->
           </a>
-          <a href="#" class="resources__logo">
+          <a target="_blank"  href="#" class="resources__logo">
             <!-- <img src="./images/resources-n1.svg" alt="н+1"> -->
           </a>
-          <a href="#" class="resources__logo">
+          <a target="_blank"  href="#" class="resources__logo">
             <!-- <img src="./images/resources-strelka.svg" alt="Стрелка"> -->
           </a>
-          <a href="#" class="resources__logo">
+          <a target="_blank"  href="#" class="resources__logo">
             <!-- <img src="./images/resources-polka.svg" alt="Полка"> -->
           </a>
         </div>
@@ -252,21 +252,21 @@
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-            <a href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a>
-            <a href="https://praktikum.yandex.ru" class="footer__column-link">Концепция</a>
-            <a href="https://praktikum.yandex.ru" class="footer__column-link">Наставники</a>
+            <a target="_blank"  href="https://praktikum.yandex.ru" class="footer__column-link">Главная</a>
+            <a target="_blank"  href="https://praktikum.yandex.ru" class="footer__column-link">Концепция</a>
+            <a target="_blank"  href="https://praktikum.yandex.ru" class="footer__column-link">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a href="https://www.facebook.com/yandex.praktikum" class="footer__column-link">
+            <a target="_blank"  href="https://www.facebook.com/yandex.praktikum" class="footer__column-link">
               <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook
             </a>
-            <a href="https://vk.com/yandex.praktikum" class="footer__column-link">
+            <a target="_blank"  href="https://vk.com/yandex.praktikum" class="footer__column-link">
               <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">ВКонтакте
             </a>
-            <a href="https://instagram.com/yndx.praktikum" class="footer__column-link">
+            <a target="_blank"  href="https://instagram.com/yndx.praktikum" class="footer__column-link">
               <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram
             </a>
           </nav>
