исправленный html  и css

--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
 
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"></iframe>
 
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"></iframe>
 
         </div>
 
@@ -159,9 +155,9 @@
       <section class="khan">
 
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -224,20 +220,33 @@
 
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a target="_blank"  href="#" class="resources__logo">
-            <!-- <img src="./images/resources-arzamas.svg" alt="Арзамас"> -->
-          </a>
-          <a target="_blank"  href="#" class="resources__logo">
-            <!-- <img src="./images/resources-n1.svg" alt="н+1"> -->
-          </a>
-          <a target="_blank"  href="#" class="resources__logo">
-            <!-- <img src="./images/resources-strelka.svg" alt="Стрелка"> -->
-          </a>
-          <a target="_blank"  href="#" class="resources__logo">
-            <!-- <img src="./images/resources-polka.svg" alt="Полка"> -->
-          </a>
-        </div>
+        <ul class="resources__logo-zone">
+          <!-- Не очень понятно, как одновременно сделать списком и ссылками и еще с контекстными изображениями, размер по классу не задается -->
+          <li  class="resources__logo">
+            <a target="_blank"  href="#">
+              <img src="./images/resources-arzamas.svg" alt="Арзамас">
+            </a>
+          </li>
+
+          <li  class="resources__logo">
+            <a target="_blank"  href="#">
+              <img src="./images/resources-n1.svg" alt="н+1">
+            </a>
+          </li>
+
+          <li  class="resources__logo">
+            <a target="_blank"  href="#">
+              <img src="./images/resources-strelka.svg" alt="Стрелка">
+            </a>
+          </li>
+
+          <li  class="resources__logo">
+            <a target="_blank"  href="#">
+              <img src="./images/resources-polka.svg" alt="Полка">
+            </a>
+          </li>
+
+        </ul>
 
       </section>
 
